gjdoc debugging
git-svn-id: svn://svn.savannah.gnu.org/classpathx/trunk@1006 814015b8-e43b-4d26-bdac-3fba12e27a77